# savior_server

./: CMakeLists.txt  README.md  savior_server.trae.code-workspace
.trae/rules/: project_rules.md
client_demo/: CMakeLists.txt  TcpClient.cpp  TcpClient.hpp  main.cpp
docs/: architecture.md  coding_style.md  load_balancer_comparison.md  overview.md
examples/: README.md
examples/boost_asio_learning/: CMakeLists.txt  PROJECT_REORGANIZATION_SUMMARY.md  README.md
examples/boost_asio_learning/basic_examples/: 01_basic_concepts.cpp  02_timers.cpp  03_networking_basics.cpp  04_advanced_networking.cpp  05_strand_thread_safety.cpp  io_concept_analysis.cpp  io_context_analysis.cpp  io_multiplexing_analysis.cpp
examples/boost_asio_learning/docs/: boost_installation.md  learning_guide.md
examples/boost_asio_learning/projects/: README.md
examples/boost_asio_learning/projects/chat_server/: README.md  chat_client.cpp  chat_server.cpp
examples/boost_asio_learning/tools/: setup_env.bat  test_runner.py
include/core/: Server.hpp
include/entity/: Entity.hpp
include/message/: MessageTypes.hpp
include/network/: TcpServer.hpp
libs/: README.md  setup_boost_headers.bat  setup_boost_source.bat
scripts/SaviorServer.Scripts/: SaviorServer.Scripts.csproj
src/: main.cpp
src/core/: CMakeLists.txt  Server.cpp
src/entity/: CMakeLists.txt  Entity.cpp
src/message/: CMakeLists.txt  MessageTypes.cpp
src/network/: CMakeLists.txt  TcpServer.cpp
tests/: CMakeLists.txt  simple_test.cpp
